--- a/ToolKit.Tests/ToolKit.Tests.csproj
+++ b/ToolKit.Tests/ToolKit.Tests.csproj
@@ -10,5 +10,10 @@
     <ItemGroup>
       <ProjectReference Include="..\ToolKit\ToolKit.csproj" />
     </ItemGroup>
+    
+    <PropertyGroup>
+        <AssemblyName>pathmage.ToolKit.Tests</AssemblyName>
+        <RootNamespace>pathmage.ToolKit.Tests</RootNamespace>
+    </PropertyGroup>
 
 </Project>
