--- a/pathmage.ToolKit/pathmage.ToolKit.csproj
+++ b/pathmage.ToolKit/pathmage.ToolKit.csproj
@@ -26,6 +26,11 @@
     <ItemGroup>
         <None Include="../LICENSE" Pack="true" PackagePath=""/>
         <None Include="../README.md" Pack="true" PackagePath=""/> 
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Helpers\" />
+      <Folder Include="Utilities\" />
     </ItemGroup> 
 
 </Project>
