--- a/AdamKnight.ToolKit/AdamKnight.ToolKit.csproj
+++ b/AdamKnight.ToolKit/AdamKnight.ToolKit.csproj
@@ -5,7 +5,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Version>1.1.10</Version>
+        <Version>1.2.0</Version>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
@@ -15,17 +15,17 @@
     <PropertyGroup>
         <AssemblyName>AdamKnight.ToolKit</AssemblyName>
         <RootNamespace>AdamKnight.ToolKit</RootNamespace>
-        <Title>pathmage.ToolKit</Title> 
-        <PackageId>pathmage.ToolKit</PackageId>
-        <Authors>Adam Knight (pathmage)</Authors>
-        <RepositoryUrl>https://github.com/pathmage-dev/csharp-tool-kit</RepositoryUrl>
+        <Title>AdamKnight.ToolKit</Title>
+        <PackageId>AdamKnight.ToolKit</PackageId>
+        <Authors>Adam Knight</Authors>
+        <RepositoryUrl>https://github.com/adam-knt-pv/csharp-tool-kit</RepositoryUrl>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
         <None Include="../LICENSE" Pack="true" PackagePath=""/>
-        <None Include="../README.md" Pack="true" PackagePath=""/> 
-    </ItemGroup> 
+        <None Include="../README.md" Pack="true" PackagePath=""/>
+    </ItemGroup>
 
 </Project>
